@@ -65,6 +65,11 @@ static request_rec *php_apache_lookup_uri(char *filename TSRMLS_DC)
 	}
 	
 	ctx = SG(server_context);
+
+	/* Ensure that the ap_r* layer is flushed, to work around 2.0 bug:
+	 * http://issues.apache.org/bugzilla/show_bug.cgi?id=17629 */
+	ap_rflush(ctx->r);
+
 	return ap_sub_req_lookup_uri(filename, ctx->r, ctx->r->output_filters);
 }
 
